# rabber-stm32-linktool

./: .gitignore  COMPONENT_GUIDE.md  COMPONENT_GUIDE_EN.md  Cargo.toml  LICENSE  Makefile  README.md  README_EN.md
.deepseek/: instructions.md
plugin-loader/: README.md  README_EN.md  go.mod  main.go  plugin-loader
plugins/: README.md  README_EN.md  manifest.json  manifest.yaml
plugins/c_compiler/js/: component.json
plugins/c_compiler/python/: compiler.py
plugins/cmsis_dap/js/: component.json
plugins/cmsis_dap/python/: downloader.py
plugins/stlink_v2/: README.md  README_EN.md
plugins/stlink_v2/js/: component.js  component.json
plugins/stlink_v2/python/: api_example.py  downloader.py
release/: 1.0.1-release-notes.md  MD5SUMS.txt  rabber-stm32-linktool-1.0.0  rabber-stm32-linktool-1.0.1-linux  rabber-stm32-linktool-1.1.0-linux  rabber-stm32-linktool-1.1.2-fix-linux  rabber-stm32-linktool-1.3.1-Hotfix-macos
src/: cli.rs  flash.rs  install.rs  logger.rs  main.rs  output.rs  plugin.rs  shell.rs  stlink.rs  utils.rs
